# centy-tui

./: .tarpaulin.toml  Cargo.toml  build.rs  cspell.json
.cargo-husky/hooks/: pre-commit
.centy/: .centy-manifest.json  cspell.json
.centy/docs/: input-guidelines.md
.centy/issues/040d4ebc-2fe7-43d7-8b20-b8226c9c967a/: issue.md  metadata.json
.centy/issues/08109af9-24bb-43c9-afd1-079ac84aece7/: issue.md  metadata.json
.centy/issues/086fc7fb-a46d-4221-8b8c-0456d5555dd1/: issue.md  metadata.json
.centy/issues/0b9655a1-4148-43b3-9381-03da80e2b5ff/: issue.md  metadata.json
.centy/issues/1c099588-7726-4cd2-9e40-499d7b005f77/: issue.md  metadata.json
.centy/issues/1dd80976-07a4-4313-b64d-828dc9663c56/: issue.md  metadata.json
.centy/issues/228e251d-f6c9-41cb-b360-d22b8d6641e0/: issue.md  metadata.json
.centy/issues/283ba84e-acbd-4a2b-99b2-e931a3af90e8/: metadata.json
.centy/issues/2c62ecaa-1e1f-42bf-ab9f-693fd493d880/: issue.md  metadata.json
.centy/issues/3596ef53-f2af-47e0-9b3b-5645ac211974/: issue.md  metadata.json
.centy/issues/36d06bb5-7b10-4b0d-a4c1-fc977c06c614/: issue.md  plan.md  (+1 more)
.github/workflows/: ci.yml  release.yml
proto/: centy.proto
src/: app.rs  app.rs.bak  config.rs  main.rs  platform.rs
src/daemon/: client.rs  mod.rs  traits.rs
src/state/: app_state.rs  mod.rs  screen_buffer.rs  selection.rs  splash_state.rs  ui_area.rs
src/ui/: config_panel.rs  context_bar.rs  daemon_panel.rs  docs.rs  forms.rs  global_search.rs  issues.rs  layout.rs  mod.rs  organization.rs  people.rs  projects.rs  prs.rs  splash.rs  terminal.rs  widgets.rs
(+125 files in other folders)
